<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MitigationSetting">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/mitigation_setting"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isolationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/enable_isolation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTextView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/isolationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:contentDescription="@string/isolation_switch_description"
        app:layout_constraintStart_toEndOf="@id/isolationTextView"
        app:layout_constraintTop_toBottomOf="@id/headerTextView" />

    <TextView
        android:id="@+id/resourceBackoffTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/enable_resource_backoff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isolationSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/resourceBackoffSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/resource_backoff_switch_description"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/resourceBackoffTextView"
        app:layout_constraintTop_toBottomOf="@id/isolationSwitch" />
</androidx.constraintlayout.widget.ConstraintLayout>

